fix: z-index issue for color palette modal

--- a/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
@@ -35,6 +35,10 @@
   background-color: #fff;
 }
 
+.customize-control-ast-color-palette .ast-field-settings-modal {
+	z-index: 11;
+}
+
 .ast-field-settings-modal .customize-control-ast-divider:first-child {
   margin-top: 15px;
 }
